--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     
     <section>
-        <input type="text" placeholder="Faça sua busca..." id="input" onclick="pesquisar()">
+        <input type="text" placeholder="Digite o nome de um usuário..." id="input" onclick="pesquisar()">
         <div id="divfoto"></div>
         <div id="div1">
             
